汎用マクロ追加

--- a/ios-support-demo/ios-support-demo/ios-support-demo-Info.plist
+++ b/ios-support-demo/ios-support-demo/ios-support-demo-Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>HostNameAPI</key>
+	<string>https://api.ios-dev.team-lab.com</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
